# cmake-childproject-minimumexample

./: .gitignore  README.md
testextinc/: CMakeLists.txt
testextinc-findpackage/childproject/: CMakeLists.txt
testextinc/childproject/: childprojectConfig.cmake
